# legacy-support-adjudication-skill

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: example_case.yml  scanner_rule.yml
.github/workflows/: ci.yml
examples/: agent_prompt.md  example_verdicts.md
resources/: legacy_patterns.yml  report_template.md
scripts/: git_support_archaeology.sh  legacy_support_scan.py  render_lsa_report.py
semgrep/: legacy-support-patterns.yml
skills/legacy-support-adjudication/: SKILL.md
skills/legacy-support-adjudication/evals/: README.md  evals.json  trigger_queries.json
skills/legacy-support-adjudication/examples/: decision_traps.md  example_verdicts.md
skills/legacy-support-adjudication/references/: evidence_rubric.md  review_comment_templates.md
skills/legacy-support-adjudication/scripts/: git_support_archaeology.sh  legacy_support_scan.py  render_lsa_report.py
