[project]
name = "legacy-support-adjudication-skill"
version = "0.1.0"
description = "Agent skill for evidence-based review of legacy compatibility support and deprecation cleanup."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Pratyush Sudhakar" }]
keywords = [
  "agent-skill",
  "code-review",
  "deprecation",
  "backward-compatibility",
  "technical-debt",
  "software-archaeology",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/pratyush1712/legacy-support-adjudication-skill"
Repository = "https://github.com/pratyush1712/legacy-support-adjudication-skill"
Issues = "https://github.com/pratyush1712/legacy-support-adjudication-skill/issues"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
